Fix spacing for input fields with placeholder text

--- a/styles.css
+++ b/styles.css
@@ -379,6 +379,7 @@ input {
   font-family: Lora;
   font-size: 1.5em;
   flex-basis: 100%;
+  padding-left: 15px;
 }
 
 #signupButton {
